--- a/widget.css
+++ b/widget.css
@@ -1,5 +1,5 @@
-body {
-	margin-top: 50px;
+.sticky.squares_container {
+    z-index: 6;
 }
 
 #widget_squares_container {
@@ -7,8 +7,6 @@ body {
 	margin: 0;
 	padding: 0;
 	width: 100%;
-	position: fixed;
-	z-index: 2;
 	top: 0;
 	left: 0;
 }
@@ -18,6 +16,5 @@ body {
 	font-size: 0;
 	height: 50px;
 	margin: 0;
-	margin-right: -4px;
 	padding: 0;
 }
